# Ilya_lab2

./: .gitignore  ArrayOfWords.cpp  ArrayOfWords.h  CMakeLists.txt  Word.cpp  Word.h  dialog.cpp
tests/: CMakeLists.txt  test.cpp
